# tjNaoBackup

./: readme  tet
Src/Nao/: CMakeLists.txt  CMakeLists_back.txt  MainModule.cpp  MainModule.h  config.h  main.cpp  main.h
Src/Nao/CVS/: Entries  Repository
Src/Simulation/: CMakeLists.txt  DockWidget.cpp  DockWidget.h  MenuBar.cpp  MenuBar.h  MotionWidget.cpp  MotionWidget.h  MotionWindow.cpp  MotionWindow.h  SignalControl.cpp  SignalControl.h  SignalControlWnd.cpp  SignalControlWnd.h  SignalUnconflict.h  Simulation.qrc  SimulationData.cpp  SimulationData.h  SubWindow.cpp  SubWindow.h  TableWindow.cpp  TableWindow.h  ToolBar.cpp  ToolBar.h  config.h  main.cpp  mainwindow.cpp  mainwindow.h
Src/Simulation/ActuatorGUI/: MotionEngineWindow.cpp  MotionEngineWindow.h
Src/Simulation/ActuatorGUI/CVS/: Entries  Repository
Src/Simulation/BehavView/: BehavView.qrc  FileDirectory.cpp  FileDirectory.h  GraphView.cpp  GraphView.h  PythonFile.cpp  PythonFile.h  main.cpp  mainWindow.cpp  mainWindow.h
Src/Simulation/BehavView/CVS/: Entries  Repository
Src/Simulation/BehavView/Platform/: GetSetting.cpp  GetSetting.h
Src/Simulation/BehavView/Platform/CVS/: Entries  Repository
Src/Simulation/BehavView/icons/CVS/: Entries  Repository
Src/Simulation/BehaviorGUI/: BehaviorDataWindow.cpp  BehaviorDataWindow.h
Src/Simulation/BehaviorGUI/CVS/: Entries  Repository
Src/Simulation/CVS/: Entries  Repository
Src/Simulation/LocatorGUI/: FieldDrawing.cpp  FieldDrawing.h  LocOnlineControlWnd.cpp  LocOnlineControlWnd.h  LocatorWindow.cpp  LocatorWindow.h
Src/Simulation/LocatorGUI/CVS/: Entries  Repository
Src/Simulation/NaoProvider/: ActuatorSimProvider.cpp  ActuatorSimProvider.h  SimuNaoProvider.cpp  SimuNaoProvider.h  VisionSimulation.cpp  VisionSimulation.h
Src/Simulation/NaoProvider/CVS/: Entries  Repository
Src/Simulation/ODESimulation/CVS/: Entries  Repository
Src/Simulation/ODESimulation/ODEprocessor/: ODECameraProvider.cpp  ODECameraProvider.h  ODEOutBehaviorProvider.cpp  ODEOutBehaviorProvider.h  ODEmassage.cpp  ODEmassage.h
Src/Simulation/ODESimulation/ODEprocessor/CVS/: Entries  Repository
Src/Simulation/ODESimulation/SimulationCore/Actuators/: Actuator.h  BallJoint.cpp  BallJoint.h  Hinge.cpp  Hinge.h  Joint.cpp  Joint.h  Led.cpp  Led.h  Motor.cpp  Motor.h  MotorController.cpp  MotorController.h  Slider.cpp  Slider.h  StandardMotor.cpp  StandardMotor.h  UniversalJoint.cpp  UniversalJoint.h  WheelSuspension.cpp  WheelSuspension.h
Src/Simulation/ODESimulation/SimulationCore/CVS/: Entries  Repository
Src/Simulation/ODESimulation/SimulationCore/Controller/: Controller.cpp  Controller.h  View.cpp  View.h
Src/Simulation/ODESimulation/SimulationCore/OpenGL/: Constants.h  CubeMap.cpp  CubeMap.h  Environment.cpp  Environment.h  FPS_Counter.cpp  FPS_Counter.h  FramebufferObject.cpp  FramebufferObject.h  GLHelper.cpp  GLHelper.h  GLtexture.cpp  GLtexture.h  Light.cpp  Light.h  Noise.cpp  Noise.h  ObjectRenderer.cpp  ObjectRenderer.h  Shader.cpp  Shader.h  ShaderInterface.cpp  ShaderInterface.h  ShaderProgram.cpp  ShaderProgram.h
Src/Simulation/ODESimulation/SimulationCore/Parser/: LibXML2ParserImpl.cpp  LibXML2ParserImpl.h  ParserUtilities.cpp  ParserUtilities.h  SAX2Parser.cpp  SAX2Parser.h
Src/Simulation/ODESimulation/SimulationCore/PhysicalObjects/: Box.cpp  Box.h  CappedCylinder.cpp  CappedCylinder.h  ComplexShape.cpp  ComplexShape.h  CompoundPhysicalObject.cpp  CompoundPhysicalObject.h  Cylinder.cpp  Cylinder.h  PhysicalObject.cpp  PhysicalObject.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Src/Simulation/ODESimulation/SimulationCore/Platform/: AVIHelp.h  Assert.h  OffScreenRenderer.h  System.h
Src/Simulation/ODESimulation/SimulationCore/Sensors/: Accelerometer.cpp  Accelerometer.h  Bumper.cpp  Bumper.h  Camera.cpp  Camera.h  DistanceSensor.cpp  DistanceSensor.h  FSRSensor.cpp  FSRSensor.h  Gyroscope.cpp  Gyroscope.h  ImagingSensor.cpp  ImagingSensor.h  InteractiveButton.cpp  InteractiveButton.h  PositionSensor.cpp  PositionSensor.h  PressureSensor.cpp  PressureSensor.h  SimSensor.h  SingleDistanceSensor.cpp  SingleDistanceSensor.h
Src/Simulation/ODESimulation/SimulationCore/Simulation/: APIDatatypes.h  Actuatorport.cpp  Actuatorport.h  PhysicsParameterSet.cpp  PhysicsParameterSet.h  RoSi.xsd  Sensorport.h  SimObject.cpp  SimObject.h  Simulation.cpp  Simulation.h
Src/Simulation/ODESimulation/SimulationCore/Tools/: CoefficientTable.cpp  CoefficientTable.h  Debug.cpp  Debug.h  Errors.cpp  Errors.h  Material.h  ODETools.h  SimGeometry.cpp  SimGeometry.h  SimGraphics.cpp  SimGraphics.h  (+4 more)
Src/Simulation/ODESimulation/SimulationGUI/: Document.cpp  Document.h  ObjectWindow.cpp  ObjectWindow.h
Src/Simulation/VisionGUI/: CameraSettingDailog.cpp  CameraSettingDialog.h  ClassifyImageDialog.cpp  ClassifyImageDialog.h  ClassifyImageToolBox.cpp  ClassifyImageToolBox.h  ColorSpaceDialog.cpp  ColorSpaceDialog.h  ImageDialog.cpp  ImageDialog.h  PlotManager.cpp  PlotManager.h  VResultWindow.cpp  VResultWindow.h
Src/Simulation/VisionGUI/CVS/: Entries  Repository
Src/Simulation/generatedfiles/: qrc_Simulation.cpp
Src/Simulation/generatedfiles/CVS/: Entries  Repository
Src/Simulation/icons/CVS/: Entries  Repository
Src/Simulation/network/: ConnectDialog.cpp  ConnectDialog.h  ConnectInfo.cpp  ConnectInfo.h  NetCommandMsg.cpp  NetCommandMsg.h  TcpConnect.cpp  TcpConnect.h  Tcpconfig.h  receivethread.cpp  receivethread.h  sendthread.cpp  sendthread.h
Src/Simulation/network/CVS/: Entries  Repository
Src/Simulation/saTools/: SaWidget.cpp  SaWidget.h  basicJoint.cpp  basicJoint.h  jointsData.cpp  jointsData.h
Src/Simulation/saTools/CVS/: Entries  Repository
Src/Simulation/saTools/SimNaoProvider/: simNaoProvider.cpp  simNaoProvider.h
Src/Simulation/saTools/connectWidget/: ConnectInformation.cpp  ConnectInformation.h  ConnectWidget.cpp  ConnectWidget.h
Src/Simulation/saTools/saPlayerWidget/: SaPlayerWidget.cpp  SaPlayerWidget.h
Src/Simulation/saTools/sensorWidget/: SensorDataModel.cpp  SensorDataModel.h  SensorWidget.cpp  SensorWidget.h  sensorsData.h
(+477 files in other folders)
